<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MIT VoiceUp</string>
    <string name="copyright">Copyright (c) 2015 MIT</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="total_questions_answered">Total questions answered</string>
    <string name="num_questions">NUM_QUESTIONS</string>
    <string name="current_streak">Current streak</string>
    <string name="num_days">NUM_DAYS</string>
    <string name="take_todays_survey">Take today\'s survey</string>
    <string name="data_sync">Data Sync</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slider_question">Slider Question</string>
    <string name="onehundred">100</string>
    <string name="zero">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_preview">PreviewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_eligibility">Eligibility</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="not_eligible">Unfortunately, you are ineligible to join this study.</string>
    <string name="okay">Okay</string>
    <string name="title_activity_account_creation">AccountCreationActivity</string>
    <string name="title_activity_consent">ConsentActivity</string>
    <string name="consent">Consent</string>
    <string name="first_name">First Name</string>
    <string name="required">Required</string>
    <string name="last_name">Last Name</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="more_information">More Information</string>
    <string name="name_required">Please input your first and last name.</string>
    <string name="email">Email</string>
    <string name="verify_password">Verify Password</string>
    <string name="title_activity_resources">Depression &amp; Suicide Resources</string>
    <string name="preference_file_key">PREFERENCE_FILE_KEY</string>
    <string name="saved_username">SAVED_USERNAME</string>
    <string name="saved_password">SAVED_PASSWORD</string>
    <string name="title_activity_consent_signature">Consent</string>
    <string name="take_missed_surveys">Take Missed Survey</string>
    <string name="downloadUrlCampaign">https://voicesurvey.mit.edu/sites/default/files/documents/campaign.json</string>

    <string name="gameNumRedDragon">gameNumRedDragon</string>
    <string name="gameNumOrangeDragon">gameNumOrangeDragon</string>
    <string name="gameNumYellowDragon">gameNumYellowDragonn</string>
    <string name="gameNumGreenDragon">gameNumGreenDragon</string>
    <string name="gameNumBlueDragon">gameNumBlueDragon</string>
    <string name="gameNumVioletDragon">gameNumVioletDragon</string>

</resources>
